2012-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* R/bib.R: Trim the trailing ".bib" from the generated bibtex
	filename as Windows adds one anyway leading to two and an error

2012-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Module.h (Rcpp): Corrected typo / incomplete
	reference in finalizer use

2012-07-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/config.h: In order to not attempt to include
	exception_defines.h if on OS X (as the clang runtime may not have
	predictable access to g+++ headers providing these), do not define
	RCPP_HAS_DEMANGLING which is used in src/exceptions.cpp

2012-06-28  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.13
        * inst/NEWS: Release 0.9.13
        * inst/include/Rcpp/config.h: Release 0.9.13
        * debian/*: Similarly updated for new release to Debian

        * tests/doRUnit.R: Updated, added (by default commented-out) setting
        to enforce all tests to run, added standard copyright headers noting
        heritage off work by Martin Maechler and Gregor Gorjanc

        * inst/unitTests/runTests.R: Only check environment variable to run
        all tests if it is not already set (to cooperate with doRUnit.R)

2012-06-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/Environment.cpp: Default ctor initializes its RObject with
	R_GlobalEnv; SEXP constructor does not use a default arg as it tests
	* inst/include/Rcpp/Environment.h: Corresponding change

	* inst/include/RcppCommon.h: #define(s) for before/after clang++ 3.0

	* src/exceptions.cpp: Added support for clang++ (>= 3.0) which (just
	like g++ 4.6 or later) needs bits/exceptions_defines

	* inst/unitTests/runit.modref.R: re-activated
	* inst/unitTests/runit.Module.client.package.R: re-activated core

 	* inst/unitTests/runit.modref.R: Run only if RunAllCppTests var set
	* inst/unitTests/runit.Module.client.package.R: Idem
	* inst/unitTests/runit.support.R: Idem
	* inst/unitTests/runit.rcout.R: Idem